change(inventory): drop role_source, fix ranged hosts, docs update

--- a/examples/inventory/ansible.cfg
+++ b/examples/inventory/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 roles_path = ./roles
-collections_path = ../collections
+collections_path = ./collections
 timeout = 120
 inventory_ignore_patterns = '^(?!_inventory\.yml).*$'
 
